c2rust-transpile/tests/snapshots/snapshots__transpile@varargs.c.2024.aarch64.macos.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/arch-os-specific/varargs.2024.aarch64.macos.rs
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
unsafe extern "C" {
    unsafe fn printf(_: *const ::core::ffi::c_char, ...) -> ::core::ffi::c_int;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn call_printf() {
    printf(
        b"%d, %f\n\0".as_ptr() as *const ::core::ffi::c_char,
        10 as ::core::ffi::c_int,
        1.5f64,
    );
}
